--- a/src/app/components/user/user-internal-crud/user-internal-crud.component.html
+++ b/src/app/components/user/user-internal-crud/user-internal-crud.component.html
@@ -1,22 +1,21 @@
 <div class="section">
   <div class="row m-valign-wrapper">
     <div class="col s12 m12">
-      <mz-modal [fixedFooter]="true" [options]="modalOptions"  [fullscreen]="true">
+      <mz-modal [fixedFooter]="true" [options]="modalOptions" [fullscreen]="true">
         <mz-modal-header>
           <h4>Usuario</h4>
         </mz-modal-header>
         <mz-modal-content>
-          <mz-tab
-            [fixedTabWidth]="'true'"
-          >
-            <mz-tab-item [active]="'true'"
-                         [label]="'Datos Generales'"
-            >
+          <mz-tab [fixedTabWidth]="'true'">
+
+            <mz-tab-item [active]="'true'" [label]="'Datos Generales'">
               <app-user-generaldata-tab [(user)]="user"></app-user-generaldata-tab>
             </mz-tab-item>
-            <mz-tab-item [label]="'Direcciones'"
-            >
-              <app-user-address-tab  [(user)]="user"></app-user-address-tab>
+            <mz-tab-item [label]="'Direcciones'">
+              <app-user-address-tab [(user)]="user"></app-user-address-tab>
+            </mz-tab-item>
+            <mz-tab-item [label]="'Roles'">
+              <app-user-role-tab  [(user)]="user"></app-user-role-tab>
             </mz-tab-item>
           </mz-tab>
         </mz-modal-content>
