--- a/src/app/navigation/nav-bar/nav-bar.component.html
+++ b/src/app/navigation/nav-bar/nav-bar.component.html
@@ -32,4 +32,5 @@
   <!-- Dropdown Structure -->
   <ul id="dropdownAdm" class="dropdown-content">
     <li><a routerLink="/user" routerLinkActive="active">Usuarios</a></li>
+    <li><a routerLink="/role" routerLinkActive="active">Roles</a></li>
   </ul>
