--- a/src/app/navigation/side-nav/side-nav.component.html
+++ b/src/app/navigation/side-nav/side-nav.component.html
@@ -22,10 +22,10 @@
     </mz-sidenav-collapsible-header>
     <mz-sidenav-collapsible-content>
       <mz-sidenav-link>
-        <a href="#" class="waves-effect">Saraza 1</a>
+        <li><a routerLink="/user" routerLinkActive="active">Usuarios</a></li>
       </mz-sidenav-link>
       <mz-sidenav-link>
-        <li><a routerLink="/user" routerLinkActive="active">Usuarios</a></li>
+        <li><a routerLink="/role" routerLinkActive="active">Roles</a></li>
       </mz-sidenav-link>
     </mz-sidenav-collapsible-content>
   </mz-sidenav-collapsible>
