--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -92,3 +92,8 @@ hr{
   background-color: $primary-color-light!important;
 }
 
+.btn, .btn-large {
+  background-color: $primary-color-dark !important;
+  margin: 5px;
+}
+
