--- a/src/app/components/user/user-internal-crud/user-role-tab/user-role-tab.component.html
+++ b/src/app/components/user/user-internal-crud/user-role-tab/user-role-tab.component.html
@@ -2,7 +2,7 @@
   <dual-list [source]="roleList"
              [key]="'oid'"
              [display]="'name'"
-             [(destination)]="user.roles"
+             [(destination)]="valueObject.roles"
              height="265px"
              [format]="format"
              [disabled]="disabled"
