--- a/src/app/components/user/user-internal-crud/user-internal-crud.component.html
+++ b/src/app/components/user/user-internal-crud/user-internal-crud.component.html
@@ -9,13 +9,13 @@
           <mz-tab [fixedTabWidth]="'true'">
 
             <mz-tab-item [active]="'true'" [label]="'Datos Generales'">
-              <app-user-generaldata-tab [(user)]="user"></app-user-generaldata-tab>
+              <app-user-generaldata-tab [(valueObject)]="valueObject"></app-user-generaldata-tab>
             </mz-tab-item>
             <mz-tab-item [label]="'Direcciones'">
-              <app-user-address-tab [(user)]="user"></app-user-address-tab>
+              <app-user-address-tab [(valueObject)]="valueObject"></app-user-address-tab>
             </mz-tab-item>
             <mz-tab-item [label]="'Roles'">
-              <app-user-role-tab  [(user)]="user"></app-user-role-tab>
+              <app-user-role-tab  [(valueObject)]="valueObject"></app-user-role-tab>
             </mz-tab-item>
           </mz-tab>
         </mz-modal-content>
@@ -23,7 +23,7 @@
 
           <app-internal-crud
             [form]="generalDataTab.form"
-            [persistentObject]="user"
+            [persistentObject]="valueObject"
             (saveEmitter)="save()"
           >
           </app-internal-crud>
