--- a/src/app/components/user/user-internal-crud/user-address-tab/user-address-tab.component.html
+++ b/src/app/components/user/user-internal-crud/user-address-tab/user-address-tab.component.html
@@ -162,24 +162,26 @@
 
 <div class="row">
   <div class="col s10 offset-s1">
-    <table class="highlight centered striped bordered table-container-internal-crud">
-      <thead>
-      <tr>
-        <th *ngFor="let row of displayedColumns"> {{row}}</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr class="row-grid-crud" *ngFor="let row of valueObject.addresses"
-          (click)="setClickedRow(row)"
-          [class.active]="row.oid === selectedRow" [ngClass]="{'row-inactive': !row.isActive}">
-        <td>{{ row.street }}</td>
-        <td>{{ row.number }}</td>
-        <td>{{ row.location }}</td>
-        <td *ngIf="row.isDefault"><i class="small material-icons">check_box</i></td>
-        <td *ngIf="!row.isDefault"><i class="small material-icons">check_box_outline_blank</i></td>
-      </tr>
-      </tbody>
-    </table>
+    <div class="table-container-internal-crud">
+      <table class="highlight centered striped bordered">
+        <thead>
+        <tr>
+          <th *ngFor="let row of displayedColumns"> {{row}}</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="row-grid-crud" *ngFor="let row of valueObject.addresses"
+            (click)="setClickedRow(row)"
+            [class.active]="row.oid === selectedRow" [ngClass]="{'row-inactive': !row.isActive}">
+          <td>{{ row.street }}</td>
+          <td>{{ row.number }}</td>
+          <td>{{ row.location }}</td>
+          <td *ngIf="row.isDefault"><i class="small material-icons">check_box</i></td>
+          <td *ngIf="!row.isDefault"><i class="small material-icons">check_box_outline_blank</i></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 
